test/fail/base-and-core.mo
//MOC-FLAG --package base base-and-core/base --package core base-and-core/core --implicit-package core
import A "mo:base/Array";
import B "mo:core/Array";

persistent actor {

};
